cmake_minimum_required(VERSION 2.8.12)
project(h2o_static)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE")

# Inclure les fichiers nécessaires et les dépendances
include_directories(
    include
    deps/cloexec
    deps/brotli/c/include
    deps/golombset
    deps/hiredis
    deps/libgkc
    deps/libyrmcds
    deps/klib
    deps/neverbleed
    deps/picohttpparser
    deps/picotest
    deps/picotls/deps/cifra/src/ext
    deps/picotls/deps/cifra/src
    deps/picotls/deps/micro-ecc
    deps/picotls/include
    deps/quicly/include
    deps/yaml/include
    deps/yoml
    ${CMAKE_CURRENT_BINARY_DIR}
)

# Définir les fichiers sources
set(LIB_SOURCE_FILES
    deps/cloexec/cloexec.c
    deps/hiredis/async.c
    deps/hiredis/hiredis.c
    deps/hiredis/net.c
    deps/hiredis/read.c
    deps/hiredis/sds.c
    deps/hiredis/alloc.c
    deps/libgkc/gkc.c
    deps/libyrmcds/close.c
    deps/libyrmcds/connect.c
    deps/libyrmcds/recv.c
    deps/libyrmcds/send.c
    deps/libyrmcds/send_text.c
    deps/libyrmcds/socket.c
    deps/libyrmcds/strerror.c
    deps/libyrmcds/text_mode.c
    deps/picohttpparser/picohttpparser.c
    deps/picotls/deps/cifra/src/blockwise.c
    deps/picotls/deps/cifra/src/chash.c
    deps/picotls/deps/cifra/src/curve25519.c
    deps/picotls/deps/cifra/src/drbg.c
    deps/picotls/deps/cifra/src/hmac.c
    deps/picotls/deps/cifra/src/sha256.c
    deps/picotls/lib/certificate_compression.c
    deps/picotls/lib/hpke.c
    deps/picotls/lib/pembase64.c
    deps/picotls/lib/picotls.c
    deps/picotls/lib/openssl.c
    deps/picotls/lib/cifra/random.c
    deps/picotls/lib/cifra/x25519.c
    deps/quicly/lib/cc-cubic.c
    deps/quicly/lib/cc-pico.c
    deps/quicly/lib/cc-reno.c
    deps/quicly/lib/defaults.c
    deps/quicly/lib/frame.c
    deps/quicly/lib/local_cid.c
    deps/quicly/lib/loss.c
    deps/quicly/lib/quicly.c
    deps/quicly/lib/ranges.c
    deps/quicly/lib/rate.c
    deps/quicly/lib/recvstate.c
    deps/quicly/lib/remote_cid.c
    deps/quicly/lib/retire_cid.c
    deps/quicly/lib/sendstate.c
    deps/quicly/lib/sentmap.c
    deps/quicly/lib/streambuf.c
    lib/common/cache.c
    lib/common/file.c
    lib/common/filecache.c
    lib/common/hostinfo.c
    lib/common/http1client.c
    lib/common/http2client.c
    lib/common/http3client.c
    lib/common/httpclient.c
    lib/common/memcached.c
    lib/common/memory.c
    lib/common/multithread.c
    lib/common/redis.c
    lib/common/serverutil.c
    lib/common/socket.c
    lib/common/socketpool.c
    lib/common/string.c
    lib/common/rand.c
    lib/common/time.c
    lib/common/timerwheel.c
    lib/common/token.c
    lib/common/url.c
    lib/common/balancer/roundrobin.c
    lib/common/balancer/least_conn.c
    lib/common/absprio.c
    lib/core/config.c
    lib/core/configurator.c
    lib/core/context.c
    lib/core/headers.c
    lib/core/logconf.c
    lib/core/proxy.c
    lib/core/request.c
    lib/core/util.c
    lib/handler/access_log.c
    lib/handler/compress.c
    lib/handler/compress/gzip.c
    lib/handler/errordoc.c
    lib/handler/expires.c
    lib/handler/fastcgi.c
    lib/handler/file.c
    lib/handler/h2olog.c
    lib/handler/headers.c
    lib/handler/headers_util.c
    lib/handler/http2_debug_state.c
    lib/handler/mimemap.c
    lib/handler/proxy.c
    lib/handler/connect.c
    lib/handler/redirect.c
    lib/handler/reproxy.c
    lib/handler/throttle_resp.c
    lib/handler/self_trace.c
    lib/handler/server_timing.c
    lib/handler/status.c
    lib/handler/status/events.c
    lib/handler/status/memory.c
    lib/handler/status/requests.c
    lib/handler/status/ssl.c
    lib/handler/status/durations.c
    lib/handler/configurator/access_log.c
    lib/handler/configurator/compress.c
    lib/handler/configurator/errordoc.c
    lib/handler/configurator/expires.c
    lib/handler/configurator/fastcgi.c
    lib/handler/configurator/file.c
    lib/handler/configurator/h2olog.c
    lib/handler/configurator/headers.c
    lib/handler/configurator/headers_util.c
    lib/handler/configurator/http2_debug_state.c
    lib/handler/configurator/proxy.c
    lib/handler/configurator/redirect.c
    lib/handler/configurator/reproxy.c
    lib/handler/configurator/throttle_resp.c
    lib/handler/configurator/self_trace.c
    lib/handler/configurator/server_timing.c
    lib/handler/configurator/status.c
    lib/http1.c
    lib/http2/cache_digests.c
    lib/http2/casper.c
    lib/http2/connection.c
    lib/http2/frame.c
    lib/http2/hpack.c
    lib/http2/scheduler.c
    lib/http2/stream.c
    lib/http2/http2_debug_state.c
    lib/http3/frame.c
    lib/http3/qpack.c
    lib/http3/common.c
    lib/http3/server.c
)

# Créer une bibliothèque statique
add_library(h2o_static STATIC ${LIB_SOURCE_FILES})

# Configurer l'installation de la bibliothèque
install(TARGETS h2o_static DESTINATION lib)
install(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN "*.h")